feat: added layer architecture, moved login logic to UserRepository, created a recycler view for mocked items, added comments and minor changes

--- a/app/src/main/res/layout/item_sample_layout.xml
+++ b/app/src/main/res/layout/item_sample_layout.xml
@@ -2,25 +2,29 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.activities.MainActivity">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    android:padding="16dp"
+    android:background="?attr/selectableItemBackground">
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/theme_change_button"
+    <TextView
+        android:id="@+id/item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="Item Title"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/item_description"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Item Description"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/bottom_nav_menu" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/item_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
